# Emagick

./: CMakeLists.txt  compile_commands.json
include/: Emagick.h  guiHandler.h  utility.h
src/: Emagick.cpp  guiHandler.cpp  main.cpp  utility.cpp
src/qml/: Example_Buttons.qml  MainWindow.qml
